--- a/west.html
+++ b/west.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>N.E.W.S Dishes</title>
+    <title>Western Indian Dishes</title>
     <link rel="stylesheet" href="stylew.css">
 </head>
 
@@ -86,7 +86,7 @@
 
     <div class="container">
         <div class="gallery">
-            <img src="imgf/dhokla.jpg">
+            <img src="./imgf/dhokla.jpg">
             <div class="desc">
               <h2>Dhokla</h2>
               <p>The ultimate Gujarati food made from freshly ground lentils and chickpea flour named dhoklas just cannot be missed.</p>
@@ -94,57 +94,57 @@
             </div>
         </div>
         <div class="gallery">
-            <img src="imgf/khandvi.jpg">
+            <img src="./imgf/khandvi.jpg">
             <div class="desc">
                 <h2>Khandvi</h2>
                 <p>Soft rolls made of gram flour and tempered with coconut, mustard seeds, and curry leaves, these melt-in-the-mouth snacks are extremely appetising.</p>
             </div>
         </div><div class="gallery">
-            <img src="imgf/friedmodak.jpg">
+            <img src="./imgf/friedmodak.jpg">
             <div class="desc">
                <h2>Fried Modak</h2>
                <p>Modak is an Gujrati sweet dumpling dish. The sweet filling on the inside of a modak consists of freshly grated coconut and jaggery, while the outer soft shell is made from rice flour or wheat flour</p>
             </div>
         </div><div class="gallery">
-            <img src="imgf/fafdajalebi.jpg">
+            <img src="./imgf/fafdajalebi.jpg">
             <div class="desc">
                <h2>Fafda Jalebi</h2>
                <p>The crisp, yellow snack is a festival favourite. The batter, made of gram flour, carom seeds and oil,  and is deep-fried till crisp. It is served with super sweet Jalebi, deep fried Chillies and Kadhi chutney</p>
             </div>
         </div><div class="gallery">
-            <img src="imgf/bajrekiroti.jpg">
+            <img src="./imgf/bajrekiroti.jpg">
             <div class="desc">
                 <h2>Bajre Ki Roti</h2>
                 <p>Bajra (Pearl Millet) is very popular in Rajasthan. The roti will be crispy and goes well with onion and very spicy lahsun chutney.</p>
             </div>
         </div><div class="gallery">
-            <img src="imgf/dalbaati.jpg">
+            <img src="./imgf/dalbaati.jpg">
             <div class="desc">
                <h2>Dal Baati</h2>
                <p>Dal Baati, a popular dish in Rajasthan consists of Lentils wheat bread balls and Sweet powdered cereal, served with red chilli on top of it along with spicy garlic chutney.</p>
             </div>
         </div><div class="gallery">
-            <img src="imgf/PyaazKachori.jpg">
+            <img src="./imgf/PyaazKachori.jpg">
             <div class="desc">
                 <h2>Pyaaz Kachori</h2>
                 <p>Pyaaz kachori, one of the famous Rajasthani breakfast is prepared with a filling of onions, potatoes and spices.</p>
             </div>
         </div><div class="gallery">
-            <img src="imgf/MalaiGhevar.jpg">
+            <img src="./imgf/MalaiGhevar.jpg">
             <div class="desc">
                 <h2>Malai Ghevar</h2>
                 <p>Ghevar is a very popular filigreed Rajasthani sweet. It's made of all-purpose flour and is soaked in sugar syrup.</p>
             </div>
         </div>
     <div class="gallery">
-            <img src="imgf/Misalpav.jpg">
+            <img src="./imgf/Misalpav.jpg">
             <div class="desc">
                <h2>Misal Pav</h2>
                <p>One of the most famous Maharashtrian dishes which is deemed the king of this state’s street food is made of Misal which is a spicy curry made of moth beans and Pav.</p>
             </div>
         </div>
     <div class="gallery">
-            <img src="imgf/vadapav.jpg">
+            <img src="./imgf/vadapav.jpg">
             <div class="desc">
                 <h2>Vada Pav</h2>
                 <p>Vada Pav is a delicious, spicy, deep-fried patty made of potato is squeezed between a thick slice of bread, similar to a burger bun.</p>
